fix start contact text align

--- a/src/pages/start/index.less
+++ b/src/pages/start/index.less
@@ -134,7 +134,8 @@
     }
     .indexStartContact {
         padding-top: 50px;
-        text-align: center;
+        padding-left: 25px;
+        text-align: left;
 
         li {
             font-size: 20px;
